chore: 在蓝鲸社区版部署CodeCC #4526
更新codecc插件名称, 修正nfs data目录权限.

--- a/scripts/deploy-codecc/codecc.properties
+++ b/scripts/deploy-codecc/codecc.properties
@@ -93,8 +93,8 @@ BK_CODECC_TASK_ENCRYPTOR_KEY=yOB62XpuhiyWM
 ##########
 # 4-ci流水线对接
 ##########
-# BK_CODECC_PIPELINE_ATOM_CODE默认为CodeccCheckAtom. 按需修改. 蓝盾流水线中CodeCC插件的AtomCode
-BK_CODECC_PIPELINE_ATOM_CODE=CodeccCheckAtom
+# BK_CODECC_PIPELINE_ATOM_CODE默认为CodeCCCheckAtom. 按需修改. 蓝盾流水线中CodeCC插件的AtomCode
+BK_CODECC_PIPELINE_ATOM_CODE=CodeCCCheckAtom
 # BK_CODECC_PIPELINE_ATOM_VERSION默认为1.*. 按需修改. 蓝盾流水线中CodeCC插件的版本, 如果更新到了2.x, 需要修改此处.
 BK_CODECC_PIPELINE_ATOM_VERSION=1.*
 # BK_CODECC_PIPELINE_BUILD_TYPE无默认值. 无需修改.
