--- a/src/backend/ci/ext/tencent/gitci/boot-gitci-tencent/src/test/resources/all.yml
+++ b/src/backend/ci/ext/tencent/gitci/boot-gitci-tencent/src/test/resources/all.yml
@@ -41,65 +41,65 @@ on:
 stages:
   - name: "root_stage_id_1"
     id: root_stage_id_1
-    label: "${{ varivable.approve }}"
+#    label: "${{ varivable.approve }}"
     if: [ envs.BK_CI_EVENT == 'push' || varivable.approve ]
     jobs:
-      root_job_id_1:
-        name: root_job_id_1
-        runs-on:
-          - docker-on-vm
-        container:
-          image: tlinux:2.2
-          credentials:
-            username: user1
-            password: password
-        services:
-          mysql1:
-            image: mysql:8.0
-            with:
-              password: 123456
-        if:
-          - variables.DEPLOY_TYPE == 'dev' || cancelled()
-        steps:
-          - name: "root_step_1"
-            id: root_step_1
-            if: xxx
-            uses: UploadArtifactory@1.*
-            with:
-              path: test.txt
-            timeout-minutes: 480
-            continue-on-error: false
-            retry-times: 0
-            env:
-          #          - template: steps.yml
-          #            parameters:
-          #              username: STEP
-          - run: |
-              echo "root_step_1"
-        timeout-minutes: 480
-        env:
-        continue-on-error: false
-        strategy:
-          matrix:
-          fast-kill: true
-          max-parallel: 10
-        depend-on:
-          - job1
-          - job2
+#      root_job_id_1:
+#        name: root_job_id_1
+#        runs-on:
+#          - docker-on-vm
+#        container:
+#          image: tlinux:2.2
+#          credentials:
+#            username: user1
+#            password: password
+#        services:
+#          mysql1:
+#            image: mysql:8.0
+#            with:
+#              password: 123456
+#        if:
+#          - variables.DEPLOY_TYPE == 'dev' || cancelled()
+#        steps:
+#          - name: "root_step_1"
+#            id: root_step_1
+#            if: xxx
+#            uses: UploadArtifactory@1.*
+#            with:
+#              path: test.txt
+#            timeout-minutes: 480
+#            continue-on-error: false
+#            retry-times: 0
+#            env:
+#          #          - template: steps.yml
+#          #            parameters:
+#          #              username: STEP
+#          - run: |
+#              echo "root_step_1"
+#        timeout-minutes: 480
+#        env:
+#        continue-on-error: false
+#        strategy:
+#          matrix:
+#          fast-kill: true
+#          max-parallel: 10
+#        depend-on:
+#          - job1
+#          - job2
       root_job_id_2:
         name: root_job_id_2
         steps:
           - run: |
               echo "root_stage_id_1, root_job_id_2"
-        depend-on:
-          - job_id_1
-      template:
-        #        - name: jobs.yml
-        #          parameters:
-        #            username: JOB
-        - name: job1.yml@repoA
-          parameters:
-            username: RES_JOB
+#        depend-on:
+#          - job_id_1
+#      template:
+#        #        - name: jobs.yml
+#        #          parameters:
+#        #            username: JOB
+#        - name: job1.yml@repoA
+#          parameters:
+#            username: RES_JOB
     check-in:
       reviews:
         flows:
@@ -119,10 +119,7 @@ stages:
       gates:
         - template: epc_checks.yml@repoA
           parameters:
-            receivers:
-              - 1
-              - 2
-              - 3
+            receivers: [ "${{ ci.actor }}"]
       timeout-hours: 10
   #  - template: stages.yml
   #    parameters:
@@ -141,63 +138,63 @@ stages:
 #        echo "do something when the upstream fails"
 #
 
-finally:
-  root_job_id_1:
-    name: root_job_id_1
-    runs-on:
-      - docker-on-vm
-    container:
-      image: tlinux:2.2
-      credentials:
-        username: user1
-        password: password
-    services:
-      mysql1:
-        image: mysql:8.0
-        with:
-          password: 123456
-    if:
-      - variables.DEPLOY_TYPE == 'dev' || cancelled()
-    steps:
-      - name: "root_step_1"
-        id: root_step_1
-        if: xxx
-        uses: UploadArtifactory@1.*
-        with:
-          path: test.txt
-        timeout-minutes: 480
-        continue-on-error: false
-        retry-times: 0
-        env:
-      #          - template: steps.yml
-      #            parameters:
-      #              username: STEP
-      - run: |
-          echo "root_step_1"
-    timeout-minutes: 480
-    env:
-    continue-on-error: false
-    strategy:
-      matrix:
-      fast-kill: true
-      max-parallel: 10
-    depend-on:
-      - job1
-      - job2
-  root_job_id_2:
-    name: root_job_id_2
-    steps:
-      - run: |
-          echo "root_stage_id_1, root_job_id_2"
-    depend-on:
-      - job_id_1
-  template:
-    #        - name: jobs.yml
-    #          parameters:
-    #            username: JOB
-    - name: job1.yml@repoA
-      parameters:
-        username: RES_JOB
+#finally:
+#  root_job_id_1:
+#    name: root_job_id_1
+#    runs-on:
+#      - docker-on-vm
+#    container:
+#      image: tlinux:2.2
+#      credentials:
+#        username: user1
+#        password: password
+#    services:
+#      mysql1:
+#        image: mysql:8.0
+#        with:
+#          password: 123456
+#    if:
+#      - variables.DEPLOY_TYPE == 'dev' || cancelled()
+#    steps:
+#      - name: "root_step_1"
+#        id: root_step_1
+#        if: xxx
+#        uses: UploadArtifactory@1.*
+#        with:
+#          path: test.txt
+#        timeout-minutes: 480
+#        continue-on-error: false
+#        retry-times: 0
+#        env:
+#      #          - template: steps.yml
+#      #            parameters:
+#      #              username: STEP
+#      - run: |
+#          echo "root_step_1"
+#    timeout-minutes: 480
+#    env:
+#    continue-on-error: false
+#    strategy:
+#      matrix:
+#      fast-kill: true
+#      max-parallel: 10
+#    depend-on:
+#      - job1
+#      - job2
+#  root_job_id_2:
+#    name: root_job_id_2
+#    steps:
+#      - run: |
+#          echo "root_stage_id_1, root_job_id_2"
+#    depend-on:
+#      - job_id_1
+#  template:
+#    #        - name: jobs.yml
+#    #          parameters:
+#    #            username: JOB
+#    - name: job1.yml@repoA
+#      parameters:
+#        username: RES_JOB
 
 #steps:
 #  - template: steps.yml
