--- a/src/backend/ci/ext/tencent/gitci/boot-gitci-tencent/src/test/resources/templates/repoC/templates/pipeline.yml
+++ b/src/backend/ci/ext/tencent/gitci/boot-gitci-tencent/src/test/resources/templates/repoC/templates/pipeline.yml
@@ -99,63 +99,63 @@ stages:
 #        echo "do something when the upstream fails"
 #
 
-finally:
-  root_job_id_1:
-    name: root_job_id_1
-    runs-on:
-      - docker-on-vm
-    container:
-      image: tlinux:2.2
-      credentials:
-        username: user1
-        password: password
-    services:
-      mysql1:
-        image: mysql:8.0
-        with:
-          password: 123456
-    if:
-      - variables.DEPLOY_TYPE == 'dev' || cancelled()
-    steps:
-      - name: "root_step_1"
-        id: root_step_1
-        if: xxx
-        uses: UploadArtifactory@1.*
-        with:
-          path: test.txt
-        timeout-minutes: 480
-        continue-on-error: false
-        retry-times: 0
-        env:
-      #          - template: steps.yml
-      #            parameters:
-      #              username: STEP
-      - run: |
-          echo "root_step_1"
-    timeout-minutes: 480
-    env:
-    continue-on-error: false
-    strategy:
-      matrix:
-      fast-kill: true
-      max-parallel: 10
-    depend-on:
-      - job1
-      - job2
-  root_job_id_2:
-    name: root_job_id_2
-    steps:
-      - run: |
-          echo "root_stage_id_1, root_job_id_2"
-    depend-on:
-      - job_id_1
-  template:
-    #        - name: jobs.yml
-    #          parameters:
-    #            username: JOB
-    - name: job1.yml@repoA
-      parameters:
-        username: RES_JOB
+#finally:
+#  root_job_id_1:
+#    name: root_job_id_1
+#    runs-on:
+#      - docker-on-vm
+#    container:
+#      image: tlinux:2.2
+#      credentials:
+#        username: user1
+#        password: password
+#    services:
+#      mysql1:
+#        image: mysql:8.0
+#        with:
+#          password: 123456
+#    if:
+#      - variables.DEPLOY_TYPE == 'dev' || cancelled()
+#    steps:
+#      - name: "root_step_1"
+#        id: root_step_1
+#        if: xxx
+#        uses: UploadArtifactory@1.*
+#        with:
+#          path: test.txt
+#        timeout-minutes: 480
+#        continue-on-error: false
+#        retry-times: 0
+#        env:
+#      #          - template: steps.yml
+#      #            parameters:
+#      #              username: STEP
+#      - run: |
+#          echo "root_step_1"
+#    timeout-minutes: 480
+#    env:
+#    continue-on-error: false
+#    strategy:
+#      matrix:
+#      fast-kill: true
+#      max-parallel: 10
+#    depend-on:
+#      - job1
+#      - job2
+#  root_job_id_2:
+#    name: root_job_id_2
+#    steps:
+#      - run: |
+#          echo "root_stage_id_1, root_job_id_2"
+#    depend-on:
+#      - job_id_1
+#  template:
+#    #        - name: jobs.yml
+#    #          parameters:
+#    #            username: JOB
+#    - name: job1.yml@repoA
+#      parameters:
+#        username: RES_JOB
 
 resources:
   repositories:
