chore: 在蓝鲸社区版部署CodeCC #4526
codecc https脚本. #4612

--- a/scripts/deploy-codecc/codecc.properties
+++ b/scripts/deploy-codecc/codecc.properties
@@ -1,4 +1,4 @@
-# ci.env template, generated at 2021-07-13 16:26:30
+# ci.env template, generated at 2021-08-03 22:19:02
 
 ##########
 # 0-依赖声明
@@ -33,6 +33,10 @@ BK_CODECC_FQDN=codecc.$BK_DOMAIN
 BK_CODECC_HOME=$BK_HOME/codecc/
 # BK_CODECC_HOST默认为bk-codecc.service.consul. 无需修改. CODECC在蓝鲸集群内的主机名.
 BK_CODECC_HOST=bk-codecc.service.consul
+# BK_CODECC_HTTPS_PORT默认为443. 无需修改. BK_HTTP_SCHEMA 为https时有效.
+BK_CODECC_HTTPS_PORT=443
+# BK_CODECC_HTTP_PORT默认为80. 无需修改. 集群一般使用http端口互联.
+BK_CODECC_HTTP_PORT=80
 # BK_CODECC_LOGS_DIR默认为$BK_HOME/logs/codecc. 无需修改. CodeCC日志主目录, 各proj会自动创建子目录.
 BK_CODECC_LOGS_DIR=$BK_HOME/logs/codecc
 # BK_CODECC_PRIVATE_URL默认为http://bk-codecc.service.consul. 无需修改. codecc为集群外访问提供的URL. 如修改过端口, 请更新这里.
