--- a/support-files/codecc/templates/gateway#core#vhosts#codecc.server.conf
+++ b/support-files/codecc/templates/gateway#core#vhosts#codecc.server.conf
@@ -3,7 +3,7 @@ server {
   server_name __BK_CODECC_FQDN__ __BK_CODECC_HOST__;
 
 #  ### ssl config begin ###
-#  listen  ssl;
+#  listen __BK_CODECC_HTTPS_PORT__ ssl;
 #  include devops.ssl;
 #  # force https-redirects
 #  # if ($scheme = http) {
