--story=867194303 【蓝盾网关】新增stream域名

--- a/src/gateway/tencent/vhosts/all.static.server.conf
+++ b/src/gateway/tencent/vhosts/all.static.server.conf
@@ -30,7 +30,7 @@ server {
     access_log /data/bkee/logs/ci/nginx/static.gitci.access.$log_date.log devops_format;
     error_log /data/bkee/logs/ci/nginx/static.gitci.error.log;
 
-    server_name dev.git-ci.woa.com test.git-ci.woa.com git-ci.woa.com;
+    server_name dev.git-ci.woa.com test.git-ci.woa.com git-ci.woa.com stream.woa.com;
     listen 80;
 
     set_by_lua_block $static_dir {
