--story=866469453 【质量红线】stage 准入/准出支持gates
模板支持array参数传入

--- a/src/backend/ci/ext/tencent/gitci/boot-gitci-tencent/src/test/resources/all.yml
+++ b/src/backend/ci/ext/tencent/gitci/boot-gitci-tencent/src/test/resources/all.yml
@@ -20,8 +20,8 @@ stages:
           参数var_1如何取值
     gates:
       - template: epc_checks.yml
-        parameters:
-          receivers: [ "ruotiantang","royalhuang"]
+#        parameters:
+#          receivers: [ "ruotiantang","royalhuang"]
     timeout-hours: 10
   jobs:
     job_1:
