--- a/src/gateway/tencent/vhosts/external/devops.external.proxy.conf
+++ b/src/gateway/tencent/vhosts/external/devops.external.proxy.conf
@@ -1,7 +1,7 @@
 
 # app的项目logo转发
-location ~ ^/images/(.*)  {
-	proxy_read_timeout       60;
+location ~ ^/images/(.*) {
+    proxy_read_timeout 60;
     proxy_connect_timeout 60;
     proxy_send_timeout 60;
     set_by_lua_block $target {
@@ -9,31 +9,31 @@ location ~ ^/images/(.*)  {
     }
     set $images_path $1;
 
-    proxy_pass      http://$target/$images_path;
-    proxy_set_header        Host                    $target;
-    proxy_set_header        X-Real_IP               $remote_addr;
-    proxy_set_header        X-Forwarded-For         $proxy_add_x_forwarded_for;
+    proxy_pass http://$target/$images_path;
+    proxy_set_header Host $target;
+    proxy_set_header X-Real_IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 }
 
 # 用户rtx头像
-location ~ ^/avatars/(.*)  {
+location ~ ^/avatars/(.*) {
     auth_request /auth/app;
-	auth_request_set $uid $sent_http_x_devops_uid;
+    auth_request_set $uid $sent_http_x_devops_uid;
 
-	proxy_read_timeout       60;
+    proxy_read_timeout 60;
     proxy_connect_timeout 60;
     proxy_send_timeout 60;
     set_by_lua_block $target {
         return config.dcloudHost
     }
-    proxy_pass      http://$target/Public/Avatar/$uid.png;
-    proxy_set_header        Host                    $target;
-    proxy_set_header        X-Real_IP               $remote_addr;
-    proxy_set_header        X-Forwarded-For         $proxy_add_x_forwarded_for;
+    proxy_pass http://$target/Public/Avatar/$uid.png;
+    proxy_set_header Host $target;
+    proxy_set_header X-Real_IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 }
 
 # devops_app下载路径
-location ~ /app/download/(.*)\.(apk|ipa)$  {
+location ~ /app/download/(.*)\.(apk|ipa)$ {
     proxy_connect_timeout 60;
     proxy_read_timeout 1800;
     proxy_send_timeout 1800;
@@ -44,10 +44,15 @@ location ~ /app/download/(.*)\.(apk|ipa)$  {
         return config.bkrepo.domain
     }
 
+    # apk需要特殊的content-type
+    if ( $uri = /app/download/devops_app.apk ) {
+        add_header content-type "application/vnd.android.package-archive; charset=UTF-8";
+    }
+
     proxy_pass http://$target/generic/bkdevops/static/gw/app/$app_name.$2;
 }
 
 # 用户rtx信息
-location ~ ^/staffInfo  {
-	content_by_lua_file 'conf/lua/content/content_staff_info.lua';
+location ~ ^/staffInfo {
+    content_by_lua_file 'conf/lua/content/content_staff_info.lua';
 }
