--story=866469453 【质量红线】stage 准入/准出支持gates
修改红线发通知的yaml结构

--- a/src/backend/ci/ext/tencent/gitci/boot-gitci-tencent/src/test/resources/templates/repoC/templates/pipeline.yml
+++ b/src/backend/ci/ext/tencent/gitci/boot-gitci-tencent/src/test/resources/templates/repoC/templates/pipeline.yml
@@ -165,24 +165,24 @@ resources:
       credentials:
         personal-access-token: xxx
 
-#notices:
-#  - type: email
-#    title: this is a email notice
-#    content: this is a email notice,content is hello.
-#    receivers:
-#      - user1
-#      - user2
-#    ccs:
-#      - user3
-#    if: SUCCESS
-#  - type: wework-message
-#    title: this is a wework-message notice
-#    content: this is a wework-message notice,content is hello.
-#    receivers:
-#      - user1
-#      - user2
-#  - type: wework-chat
-#    chat-id:
-#      - xxxxxxxx
-#    content: this is a wework-chat notice,content is hello.
+notices:
+  - type: email
+    title: this is a email notice
+    content: this is a email notice,content is hello.
+    receivers:
+      - user1
+      - user2
+    ccs:
+      - user3
+    if: SUCCESS
+  - type: wework-message
+    title: this is a wework-message notice
+    content: this is a wework-message notice,content is hello.
+    receivers:
+      - user1
+      - user2
+  - type: wework-chat
+    chat-id:
+      - xxxxxxxx
+    content: this is a wework-chat notice,content is hello.
 
