--- a/.ci/backend.yml
+++ b/.ci/backend.yml
@@ -26,18 +26,20 @@ stages:
       steps:
       - checkout: self
       - uses: mysqlservice@1.*
-        name: Mysql服务
+        name: Start MySQL
         with:
           imageName: mysql:5.7
-          # MYSQL登录端口, 必选, 默认: 3306
           port: 3306
-          # MYSQL登录密码, 必选
           mysqlPw: root
-          initCmd: |
-            CREATE DATABASE IF NOT EXISTS `test_mysql` DEFAULT CHARACTER SET utf8mb4;
-      - name: "代码编译和单元测试"
-        id: "step_4"
+          initCmd: SELECT NOW()
+      - name: "init MySQL"
+        run: |
+          cd support-files/sql
+          for i in *.sql; do 
+            echo $i;mysql -h ${MYSQL_IP} -P ${MYSQL_PORT} -uroot -proot < $i
+          done
+      - name: "Gradle Build"
         run: | 
           cd src/backend/ci/ext/tencent
-          mysql -h ${MYSQL_IP} -P ${MYSQL_PORT} -uroot -proot -e "select now()"
+          ../../gradlew -DmysqlURL=$mysqlURL -DenvironmentMysqlURL=$mysqlURL -DprojectMysqlURL=$mysqlURL test classes
 
