--story=867424109 chore: 为bk-ci开启 Stream 修改MySQL为5.7

--- a/.ci/backend.yml
+++ b/.ci/backend.yml
@@ -1,15 +1,3 @@
-#####################################################################################################################
-# 项目ID: bkdevops 
-# 流水线ID: p-5ef04bbb79dd42a9941c9e535d81eeb7 
-# 流水线名称: BK-CI后端MR代码检查 
-# 导出时间: 2021-08-10 18:52:08 
-# 
-# 注意：不支持系统凭证(用户名、密码)的导出，请检查系统凭证的完整性！ 
-# 注意：[插件]输入参数可能存在敏感信息，请仔细检查，谨慎分享！！！ 
-# 注意：[插件]工蜂CI不支持蓝盾老版本的插件，请在研发商店搜索新插件替换 
-#####################################################################################################################
-
----
 version: "v2.0"
 name: "Backend"
 on:
@@ -29,10 +17,10 @@ stages:
         id: mysqlservice
         name: Start MySQL
         with:
-          imageName: mysql:5
+          imageName: mysql:5.7
           port: 3306
           mysqlPw: root
-          initCmd: show databases;
+          initCmd: select version();
 
       - name: "init MySQL"
         run: |
