--- a/.ci/backend.yml
+++ b/.ci/backend.yml
@@ -23,13 +23,18 @@ stages:
           initCmd: select version();
 
       - name: "init MySQL"
+        env:
+          MYSQL_IP: ${{steps.mysqlservice.outputs.MYSQL_IP}}
+          MYSQL_PORT: ${{steps.mysqlservice.outputs.MYSQL_PORT}}
         run: |
-          set -x
-          cd support-files/sql/tencent
+          cd support-files/sql/
           for i in *.sql; do
-            echo $i;mysql -h ${{steps.mysqlservice.outputs.MYSQL_IP}} -P ${{steps.mysqlservice.outputs.MYSQL_PORT}} -uroot -proot < $i
+            echo import $i start
+            mysql -h $MYSQL_IP -P $MYSQL_PORT -uroot -proot < $i
+            echo import $i done..
+            echo 
           done
-          mysql -h ${{steps.mysqlservice.outputs.MYSQL_IP}} -P ${{steps.mysqlservice.outputs.MYSQL_PORT}} -uroot -proot -e "use devops_ci_artifactory; show tables;"
+          mysql -h $MYSQL_IP -P $MYSQL_PORT -uroot -proot -e "show databases;"
 
       - name: "Gradle Build"
         env:
@@ -38,5 +43,15 @@ stages:
           mysqlPasswd: root
         run: | 
           cd src/backend/ci/ext/tencent
-          ../../gradlew -DmysqlURL=$mysqlURL -DmysqlUser=$mysqlUser -DmysqlPasswd=$mysqlPasswd  -DenvironmentMysqlURL=$mysqlURL -DenvironmentMysqlUser=$mysqlUser -DenvironmentMysqlPasswd=$mysqlPasswd -DprojectMysqlURL=$mysqlURL -DprojectMysqlUser=$mysqlUser -DprojectMysqlPasswd=$mysqlPasswd -DmysqlPrefix=devops_ci_ test classes
+          ../../gradlew -DmysqlURL=$mysqlURL \
+                        -DmysqlUser=$mysqlUser \
+                        -DmysqlPasswd=$mysqlPasswd  \
+                        -DenvironmentMysqlURL=$mysqlURL \
+                        -DenvironmentMysqlUser=$mysqlUser \
+                        -DenvironmentMysqlPasswd=$mysqlPasswd \
+                        -DprojectMysqlURL=$mysqlURL \
+                        -DprojectMysqlUser=$mysqlUser \
+                        -DprojectMysqlPasswd=$mysqlPasswd \
+                        -DmysqlPrefix=devops_ci_ 
+                        test classes
 
