--story=867424109 chore: 为bk-ci开启 Stream debug

--- a/.ci/backend.yml
+++ b/.ci/backend.yml
@@ -52,6 +52,6 @@ stages:
                         -DprojectMysqlURL=$mysqlURL \
                         -DprojectMysqlUser=$mysqlUser \
                         -DprojectMysqlPasswd=$mysqlPasswd \
-                        -DmysqlPrefix=devops_ci_ 
+                        -DmysqlPrefix=devops_ci_ \
                         test classes
 
