--story=867424109 chore: 为bk-ci开启 Stream 补全内部SQL

--- a/.ci/backend.yml
+++ b/.ci/backend.yml
@@ -3,6 +3,8 @@ name: "Backend"
 on:
   mr: [ integration ]
 
+variables:
+  var_1: 123
 stages:
 - name: "PreMR"
   label:
@@ -28,6 +30,7 @@ stages:
           MYSQL_PORT: ${{steps.mysqlservice.outputs.MYSQL_PORT}}
           MYSQL_PWD: root
         run: |
+          echo "var_1=${variables.var_1}"
           cd support-files/sql
           echo "import support-files/sql"
           for i in *.sql; do
@@ -65,4 +68,3 @@ stages:
                         -DprojectMysqlPasswd=$mysqlPasswd \
                         -DmysqlPrefix=devops_ci_ \
                         test classes
-
