--story=866473107 【蓝盾framework】bk-ci适配devops-framework框架

--- a/src/backend/ci/gradle.properties
+++ b/src/backend/ci/gradle.properties
@@ -26,7 +26,7 @@
 # devops-framework 版本
 DEVOPS_BOOT_VERSION=0.0.4
 # 版本仓库配置
-MAVEN_REPO_URL=http://mirrors.devops.oa.com/maven/
+MAVEN_REPO_URL=http://mirrors.cloud.tencent.com/nexus/repository/maven-public
 MAVEN_REPO_DEPLOY_URL=
 MAVEN_REPO_USERNAME=
 MAVEN_REPO_PASSWORD=
