--- a/src/gateway/core/nginx.conf
+++ b/src/gateway/core/nginx.conf
@@ -50,6 +50,7 @@ http {
     lua_shared_dict white_ip_cold_store 10m;
     lua_shared_dict router_srv_store 10m;
     lua_shared_dict tag_sub_path_store 1m;
+    lua_shared_dict tag_frontend_path_store 1m;
     log_format devops_format '$remote_addr [$time_local] "$request" - status:$status user:$uid up_status:$upstream_status ms:$request_time_ms up:$target rs:$bytes_sent rid:$uuid realip:$realip host:$host region:$request_region service:$service agent:$http_user_agent up_stream:$upstream_addr upstream_response_time:$upstream_response_time refer:$http_referer http_x_forwarded_for:$http_x_forwarded_for original_host:$original_host project_id:$project_id tag:$route_tag' ;
 
     lua_package_path 'conf/lua/?.lua;;';
