--story=867965263 【蓝盾网关】新增stream的前端灰度路由

--- a/src/gateway/tencent/vhosts/all.static.server.conf
+++ b/src/gateway/tencent/vhosts/all.static.server.conf
@@ -33,9 +33,7 @@ server {
     server_name dev.git-ci.woa.com test.git-ci.woa.com git-ci.woa.com stream.woa.com dev.stream.woa.com test.stream.woa.com;
     listen 80;
 
-    set_by_lua_block $static_dir {
-        return config.static_dir
-    }
+    include gray.conf;
     root $static_dir/gitci;
 
     #后台的网关特殊路径
