feat: 整理bkci的依赖 #4293

--- a/src/backend/ci/gradle.properties
+++ b/src/backend/ci/gradle.properties
@@ -39,4 +39,7 @@ DB_USERNAME=root
 DB_PASSWORD=root
 DB_PREFIX=devops_ci_
 # Gradle参数配置
-org.gradle.jvmargs=-Xmx2048M -Xms2048M
+org.gradle.daemon=true
+org.gradle.configureondemand=false
+org.gradle.parallel=true
+org.gradle.caching=true
