feat: 整理bkci的依赖 #4293

--- a/src/backend/ci/gradle.properties
+++ b/src/backend/ci/gradle.properties
@@ -43,3 +43,4 @@ org.gradle.daemon=true
 org.gradle.configureondemand=false
 org.gradle.parallel=true
 org.gradle.caching=true
+org.gradle.jvmargs=-Xms512M -Xmx5120M
