feature: turbo 前端开源 issue #5038

--- a/src/frontend/lerna.json
+++ b/src/frontend/lerna.json
@@ -7,7 +7,8 @@
     "devops-ticket",
     "devops-atomstore",
     "devops-artifactory",
-    "devops-quality"
+    "devops-quality",
+    "devops-turbo"
   ],
   "npmClient": "yarn",
   "version": "independent",
