--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -41,6 +41,7 @@
     "devops-ticket",
     "devops-pipeline",
     "devops-quality",
-    "devops-nav"
+    "devops-nav",
+    "devops-turbo"
   ]
 }
