--- a/src/backend/ci/ext/tencent/stream/boot-stream-tencent/src/main/resources/application.yml
+++ b/src/backend/ci/ext/tencent/stream/boot-stream-tencent/src/main/resources/application.yml
@@ -1,26 +1,12 @@
 spring:
   application:
     name: stream
-    desc: Landun Stream Service
+    desc: DevOps Stream Service
     version: 4.0.0
     packageName: com.tencent.devops.stream
-  datasource:
-    url: jdbc:mysql://10.125.48.80:3306/devops_gitci?useSSL=false&autoReconnect=true&timezone=+800&useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
-    username: tig4php
-    password: tig4php
-  redis:
-    database: 2
-    host: 10.125.48.80
-    password: itdev@db
-  rabbitmq:
-    virtual-host: soda4
-    username: soda
-    password: soda
-    addresses: 10.125.48.80:5672
   cloud:
-    consul:
-      discovery:
-        tags: local
+    config:
+      name: stream
 
 server:
-  port: 8092
+  port: 21940
