--- a/support-files/templates/#etc#ci#common.yml
+++ b/support-files/templates/#etc#ci#common.yml
@@ -98,6 +98,11 @@ auth:
   appSecret: __BK_CI_APP_TOKEN__
   bkloginUrl: __BK_PAAS_PRIVATE_URL__/login/api/v2
   iamCallBackUser: __BK_CI_IAM_CALLBACK_USER__
+  #  openapi服务需要配置accessToken鉴权时将enabled设为true，secret设为任意字符串string，expirationTime过期时间（毫秒）
+  #  accessToken:
+    #  enabled: __BK_CI_API_TOKEN_ENABLED__
+    #  secret: __BK_CI_API_TOKEN_SECRET__
+    #  expirationTime: __BK_CI_API_TOKEN_EXPIRED_MILLISECOND__    
 
 
 #bk esb config for cd plugin in pipeline
