--- a/scripts/containerization/values.yaml
+++ b/scripts/containerization/values.yaml
@@ -59,9 +59,11 @@ rabbitmq:
     default_permissions.write = .*
 influxdb:
   enabled: true
-  admin:
-    username: user
-    password: password
+  auth:
+    admin:
+      username: user
+      password: password
+      token: GnnsHwEcQ07sqpidcX2s
 
 persistence:
   ## 是否开启数据持久化，false则使用emptyDir类型volume, pod结束后数据将被清空，无法持久化
