--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Tag Realse
+name: Tag Release
 on:
   push:
     tags:
@@ -81,6 +81,13 @@ jobs:
       - name: Gradle Build Backend Service
         working-directory: src/backend/ci
         run: ./gradlew clean test build :core:worker:worker-agent:shadowJar -DmavenRepoUrl="https://maven.aliyun.com/nexus/content/groups/public/"
+
+      - name: Gradle Build Turbo Service
+        working-directory: src/backend/turbo
+        run: |
+          ./gradlew clean copyToRelease -DmavenRepoUrl="https://maven.aliyun.com/nexus/content/groups/public/"
+          # copy turbo service config template to ci templates dir
+          cp -rf support-files/templates/* ${{ github.workspace }}/support-files/templates/
 
       - name: Create artifact - Step1:init
         run: |
