feat: 提供kubernetes部署方案 #4935

--- a/scripts/containerization/helm-charts/Chart.yaml
+++ b/scripts/containerization/helm-charts/Chart.yaml
@@ -30,3 +30,7 @@ dependencies:
   version: 2.3.7
   repository: https://charts.bitnami.com/bitnami
   condition: influxdb.enabled
+- name: nginx-ingress-controller
+  version: 7.6.21
+  repository: https://charts.bitnami.com/bitnami
+  condition: nginx-ingress-controller.enabled
