--- a/scripts/containerization/values.yaml
+++ b/scripts/containerization/values.yaml
@@ -4,8 +4,21 @@ common:
   serviceAccount: default
 
 ## Add labels to all the deployed resources
-##
 commonLabels: {}
+
+# ingress 配置
+ingress:
+  enabled: true
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
+nginx-ingress-controller:
+  enabled: false #minikube 没发生效
+  defaultBackend:
+    enabled: false
+  service:
+    type: NodePort
+
 
 # 镜像配置
 gatewayImage:
@@ -65,8 +78,8 @@ influxdb:
       password: password
       token: GnnsHwEcQ07sqpidcX2s
 
+## 是否开启数据持久化，false则使用emptyDir类型volume, pod结束后数据将被清空，无法持久化
 persistence:
-  ## 是否开启数据持久化，false则使用emptyDir类型volume, pod结束后数据将被清空，无法持久化
   enabled: true
   accessMode: ReadWriteOnce
   size: 10Gi
