--- a/src/gateway/core/set.conf
+++ b/src/gateway/core/set.conf
@@ -16,6 +16,11 @@ set_by_lua_file $original_host 'conf/lua/set/set_original_host.lua';
 # 设置项目ID
 set_by_lua_file $project_id 'conf/lua/set/set_project_id.lua';
 
+# 设置命名空间
+set_by_lua_block $namespace {
+    return os.getenv("NAMESPACE")
+}
+
 #  设置tag
 set $route_tag '';
 
