--story=868307221 【蓝盾网关】stream前端目录临时方案

--- a/src/gateway/tencent/vhosts/all.static.server.conf
+++ b/src/gateway/tencent/vhosts/all.static.server.conf
@@ -34,6 +34,19 @@ server {
     listen 80;
 
     include gray.conf;
+
+    ## TODO 临时功能 , stream切换后要删除
+    set_by_lua_block $stream_folder {
+        local route_tag = ngx.var.route_tag
+        if route_tag ~= '' and route_tag ~= nil then
+            if route_tag.find("stream") then
+                return "stream"
+            end
+            return "gitci"
+        end
+        return "gitci"
+    }
+
     root $static_dir/stream;
 
     #后台的网关特殊路径
