--- a/src/gateway/tencent/vhosts/all.static.server.conf
+++ b/src/gateway/tencent/vhosts/all.static.server.conf
@@ -47,7 +47,7 @@ server {
         return "gitci"
     }
 
-    root $static_dir/stream;
+    root $static_dir/$stream_folder;
 
     #后台的网关特殊路径
     include vhosts/devops.backend.special.conf;
