--story=868307221 【蓝盾网关】stream前端目录临时方案

--- a/src/gateway/tencent/vhosts/all.static.server.conf
+++ b/src/gateway/tencent/vhosts/all.static.server.conf
@@ -35,18 +35,8 @@ server {
 
     include gray.conf;
 
-    ## TODO 临时功能 , stream切换后要删除
-    set_by_lua_block $stream_folder {
-        local route_tag = ngx.var.route_tag
-        if route_tag ~= '' and route_tag ~= nil then
-            if route_tag.find("stream") then
-                return "stream"
-            end
-            return "gitci"
-        end
-        return "gitci"
-    }
-
+    # TODO 临时功能 , stream切换后要删除
+    set $stream_folder '';
     root $static_dir/$stream_folder;
 
     #后台的网关特殊路径
