feat: 提供kubernetes部署方案 #4935

--- a/containerization/helm-charts/templates/store/deployment.yaml
+++ b/containerization/helm-charts/templates/store/deployment.yaml
@@ -68,6 +68,8 @@ spec:
           env:
             - name: MS_NAME
               value: store
+            - name: NAMESPACE
+              value: {{ .Release.Namespace }}
             - name: JVM_XMS
               value: {{ .Values.store.env.JVM_XMS }}
             - name: JVM_XMX
