--- a/containerization/helm-charts/templates/dispatchDocker/deployment.yaml
+++ b/containerization/helm-charts/templates/dispatchDocker/deployment.yaml
@@ -68,6 +68,8 @@ spec:
           env:
             - name: MS_NAME
               value: dispatch-docker
+            - name: NAMESPACE
+              value: {{ .Release.Namespace }}
             - name: JVM_XMS
               value: {{ .Values.dispatchDocker.env.JVM_XMS }}
             - name: JVM_XMX
