--- a/containerization/helm-charts/templates/environment/deployment.yaml
+++ b/containerization/helm-charts/templates/environment/deployment.yaml
@@ -68,6 +68,8 @@ spec:
           env:
             - name: MS_NAME
               value: environment
+            - name: NAMESPACE
+              value: {{ .Release.Namespace }}
             - name: JVM_XMS
               value: {{ .Values.environment.env.JVM_XMS }}
             - name: JVM_XMX
