--- a/containerization/helm-charts/templates/repository/deployment.yaml
+++ b/containerization/helm-charts/templates/repository/deployment.yaml
@@ -68,6 +68,8 @@ spec:
           env:
             - name: MS_NAME
               value: repository
+            - name: NAMESPACE
+              value: {{ .Release.Namespace }}
             - name: JVM_XMS
               value: {{ .Values.repository.env.JVM_XMS }}
             - name: JVM_XMX
