--- a/src/gateway/core/set.conf
+++ b/src/gateway/core/set.conf
@@ -21,6 +21,11 @@ set_by_lua_block $namespace {
     return os.getenv("NAMESPACE")
 }
 
+# 设置服务前缀
+set_by_lua_block $service_prefix {
+    return os.getenv("SERVICE_PREFIX")
+}
+
 #  设置tag
 set $route_tag '';
 
