--- a/containerization/helm-charts/templates/auth/deployment.yaml
+++ b/containerization/helm-charts/templates/auth/deployment.yaml
@@ -68,8 +68,10 @@ spec:
           env:
             - name: MS_NAME
               value: auth
-            - name: NAMESPACE
+             - name: NAMESPACE
               value: {{ .Release.Namespace }}
+             - name: SERVICE_PREFIX
+              value: {{ include "common.names.fullname" . }}
             - name: JVM_XMS
               value: {{ .Values.auth.env.JVM_XMS }}
             - name: JVM_XMX
