--- a/containerization/helm-charts/templates/environment/deployment.yaml
+++ b/containerization/helm-charts/templates/environment/deployment.yaml
@@ -68,8 +68,10 @@ spec:
           env:
             - name: MS_NAME
               value: environment
-            - name: NAMESPACE
+             - name: NAMESPACE
               value: {{ .Release.Namespace }}
+             - name: SERVICE_PREFIX
+              value: {{ include "common.names.fullname" . }}
             - name: JVM_XMS
               value: {{ .Values.environment.env.JVM_XMS }}
             - name: JVM_XMX
@@ -80,6 +82,8 @@ spec:
             - "-c"
             - |
               cp /data/workspace/backend.bkci.sh .;
+              mkdir -p {{ .Values.config.bkCiHome }};
+              ln -s {{ .Values.persistence.mountPath }}/agent-package {{ .Values.config.bkCiHome }}/agent-package;
               /bin/bash backend.bkci.sh;
           livenessProbe:
             httpGet:
@@ -101,7 +105,7 @@ spec:
             successThreshold: 1
           volumeMounts:
             - name: storage
-              mountPath: {{ .Values.config.bkCiDataDir }}
+              mountPath: {{ .Values.persistence.mountPath }}
       volumes:
         - name: storage
           {{- if .Values.persistence.enabled }}
