--- a/containerization/values.yaml
+++ b/containerization/values.yaml
@@ -83,6 +83,7 @@ persistence:
   enabled: true
   accessMode: ReadWriteOnce
   size: 10Gi
+  mountPath: /data1
   ## 绑定k8s集群中已存在的pvc
   ## Requires persistence.enabled: true
   # existingClaim: my-persistent-volume-claim
@@ -822,6 +823,42 @@ websocket:
     limits:
       cpu: 500m
       memory: 1500Mi
+  hostAliases: []
+  containerSecurityContext:
+    enabled: false
+    runAsUser: 1001
+    runAsNonRoot: true
+  podSecurityContext:
+    enabled: false
+    fsGroup: 1001
+  podAffinityPreset: ""
+  podAntiAffinityPreset: soft
+  nodeAffinityPreset:
+    type: ""
+    key: ""
+    values: []
+  affinity: {}
+  nodeSelector: {}
+  tolerations: []
+  podLabels: {}
+  podAnnotations: {}
+  priorityClassName: ""
+
+# angetless Deployment
+angetless:
+  env:
+    JVM_XMS: 512m
+    # JVM的-xmx , 不能大于 limits.memory
+    JVM_XMX: 1024m
+  replicas: 1
+  podLabels: {}
+  resources:
+    requests:
+      cpu: 100m
+      memory: 1000Mi
+    limits:
+      cpu: 500m
+      memory: 3000Mi
   hostAliases: []
   containerSecurityContext:
     enabled: false
