--- a/containerization/helm-charts/templates/dispatchDocker/deployment.yaml
+++ b/containerization/helm-charts/templates/dispatchDocker/deployment.yaml
@@ -82,6 +82,8 @@ spec:
             - "-c"
             - |
               cp /data/workspace/backend.bkci.sh .;
+              mkdir -p {{ .Values.config.bkCiHome }};
+              ln -s {{ .Values.persistence.mountPath }}/agent-package {{ .Values.config.bkCiHome }}/agent-package;
               /bin/bash backend.bkci.sh;
           livenessProbe:
             httpGet:
@@ -101,3 +103,14 @@ spec:
             timeoutSeconds: 10
             failureThreshold: 5
             successThreshold: 1
+          volumeMounts:
+            - name: storage
+              mountPath: {{ .Values.persistence.mountPath }}
+      volumes:
+        - name: storage
+          {{- if .Values.persistence.enabled }}
+          persistentVolumeClaim:
+            claimName: {{ if .Values.persistence.existingClaim }}{{ .Values.persistence.existingClaim }}{{- else }}{{ template "common.names.fullname" . }}-storage{{- end }}
+          {{- else }}
+          emptyDir: {}
+          {{- end }}
