--- a/containerization/values.yaml
+++ b/containerization/values.yaml
@@ -196,6 +196,42 @@ agentless:
   podAnnotations: {}
   priorityClassName: ""
 
+# dockerhost Deployment
+dockerhost:
+  env:
+    JVM_XMS: 512m
+    # JVM的-xmx , 不能大于 limits.memory
+    JVM_XMX: 1024m
+  replicas: 1
+  podLabels: {}
+  resources:
+    requests:
+      cpu: 100m
+      memory: 1000Mi
+    limits:
+      cpu: 500m
+      memory: 1500Mi
+  hostAliases: []
+  containerSecurityContext:
+    enabled: false
+    runAsUser: 1001
+    runAsNonRoot: true
+  podSecurityContext:
+    enabled: false
+    fsGroup: 1001
+  podAffinityPreset: ""
+  podAntiAffinityPreset: soft
+  nodeAffinityPreset:
+    type: ""
+    key: ""
+    values: []
+  affinity: {}
+  nodeSelector: {}
+  tolerations: []
+  podLabels: {}
+  podAnnotations: {}
+  priorityClassName: ""
+
 # artifactory Deployment
 artifactory:
   env:
