--- a/scripts/bkenv.properties
+++ b/scripts/bkenv.properties
@@ -1,4 +1,4 @@
-# ci.env template, generated at 2021-05-27 19:57:19
+# ci.env template, generated at 2021-09-09 16:40:32
 
 ##########
 # 0-依赖声明
@@ -33,6 +33,10 @@ BK_REPO_HOST=
 BK_SSM_HOST=
 # BK_SSM_PORT无默认值. 无需修改. 声明依赖, 蓝鲸环境下会自动填充. 其他环境无需填写.
 BK_SSM_PORT=
+# BK_TURBO_PRIVATE_URL默认为http://bk-turbo.service.consul. 按需修改. turbo网关
+BK_TURBO_PRIVATE_URL=http://bk-turbo.service.consul
+# BK_TURBO_PUBLIC_URL默认为http://turbo.$BK_DOMAIN. 按需修改. turbo网关
+BK_TURBO_PUBLIC_URL=http://turbo.$BK_DOMAIN
 
 ##########
 # 1-基础配置
@@ -73,6 +77,8 @@ BK_CI_HTTP_PORT=80
 BK_CI_IAM_CALLBACK_USER=bk_iam
 # BK_CI_IAM_ENV默认为prod. 废弃. 待清理配置文件及相关代码.
 BK_CI_IAM_ENV=prod
+# BK_CI_IAM_WEB_URL默认为$BK_PAAS_PUBLIC_URL/o/bk_iam. 请勿修改. IAM SaaS入口url, 用于拼接权限申请页面.
+BK_CI_IAM_WEB_URL=$BK_PAAS_PUBLIC_URL/o/bk_iam
 # BK_CI_JOB_FQDN无默认值. 废弃. 待清理配置文件及相关代码.
 BK_CI_JOB_FQDN=
 # BK_CI_JWT_RSA_PRIVATE_KEY无默认值. 按需修改. JWT RSA密钥对. 单行, 需要确保最终渲染为\n. 建议使用附带的脚本生成.
@@ -253,6 +259,40 @@ BK_CI_S3_BUCKET_NAME=
 BK_CI_S3_ENDPOINT_URL=
 # BK_CI_S3_SECRET_KEY无默认值. 废弃. 待清理配置文件及相关代码.
 BK_CI_S3_SECRET_KEY=
+# BK_CI_TURBO_CONSUL_DISCOVERY_TAG默认为$BK_CI_CONSUL_DISCOVERY_TAG. 无需修改. 需要和ci保持一致
+BK_CI_TURBO_CONSUL_DISCOVERY_TAG=$BK_CI_CONSUL_DISCOVERY_TAG
+# BK_CI_TURBO_MONGODB_ADDR默认为127.0.0.1:27017. 按需修改.
+BK_CI_TURBO_MONGODB_ADDR=127.0.0.1:27017
+# BK_CI_TURBO_MONGODB_DB_NAME默认为turbo_prod. 无需修改. ci-turbo主数据库.
+BK_CI_TURBO_MONGODB_DB_NAME=turbo_prod
+# BK_CI_TURBO_MONGODB_PASSWORD无默认值. 按需修改.
+BK_CI_TURBO_MONGODB_PASSWORD=
+# BK_CI_TURBO_MONGODB_USER无默认值. 按需修改.
+BK_CI_TURBO_MONGODB_USER=
+# BK_CI_TURBO_QUARTZ_MONGODB_ADDR默认为127.0.0.1:27017. 按需修改.
+BK_CI_TURBO_QUARTZ_MONGODB_ADDR=127.0.0.1:27017
+# BK_CI_TURBO_QUARTZ_MONGODB_DB_NAME默认为turbo_quartz. 无需修改. quartz需要独立db.
+BK_CI_TURBO_QUARTZ_MONGODB_DB_NAME=turbo_quartz
+# BK_CI_TURBO_QUARTZ_MONGODB_PASSWORD无默认值. 按需修改.
+BK_CI_TURBO_QUARTZ_MONGODB_PASSWORD=
+# BK_CI_TURBO_QUARTZ_MONGODB_USER无默认值. 按需修改.
+BK_CI_TURBO_QUARTZ_MONGODB_USER=
+# BK_CI_TURBO_RABBITMQ_ADDR默认为$BK_CI_RABBITMQ_ADDR. 按需修改. 独立mq, 可复用ci的.
+BK_CI_TURBO_RABBITMQ_ADDR=$BK_CI_RABBITMQ_ADDR
+# BK_CI_TURBO_RABBITMQ_PASSWORD默认为$BK_CI_RABBITMQ_PASSWORD. 按需修改.
+BK_CI_TURBO_RABBITMQ_PASSWORD=$BK_CI_RABBITMQ_PASSWORD
+# BK_CI_TURBO_RABBITMQ_USER默认为$BK_CI_RABBITMQ_USER. 按需修改.
+BK_CI_TURBO_RABBITMQ_USER=$BK_CI_RABBITMQ_USER
+# BK_CI_TURBO_RABBITMQ_VHOST默认为$BK_CI_RABBITMQ_VHOST. 按需修改. 独立mq, 可复用ci的.
+BK_CI_TURBO_RABBITMQ_VHOST=$BK_CI_RABBITMQ_VHOST
+# BK_CI_TURBO_REDIS_DB默认为$BK_CI_REDIS_DB. 按需修改.
+BK_CI_TURBO_REDIS_DB=$BK_CI_REDIS_DB
+# BK_CI_TURBO_REDIS_HOST默认为$BK_CI_REDIS_HOST. 按需修改. 独立redis, 可复用ci的.
+BK_CI_TURBO_REDIS_HOST=$BK_CI_REDIS_HOST
+# BK_CI_TURBO_REDIS_PASSWORD默认为$BK_CI_REDIS_PASSWORD. 按需修改.
+BK_CI_TURBO_REDIS_PASSWORD=$BK_CI_REDIS_PASSWORD
+# BK_CI_TURBO_REDIS_PORT默认为$BK_CI_REDIS_PORT. 按需修改.
+BK_CI_TURBO_REDIS_PORT=$BK_CI_REDIS_PORT
 
 ##########
 # 5-api port
@@ -303,5 +343,7 @@ BK_CI_SIGN_API_PORT=21950
 BK_CI_STORE_API_PORT=21918
 # BK_CI_TICKET_API_PORT默认为21915. 无需修改.
 BK_CI_TICKET_API_PORT=21915
+# BK_CI_TURBO_API_PORT默认为21955. 无需修改.
+BK_CI_TURBO_API_PORT=21955
 # BK_CI_WEBSOCKET_API_PORT默认为21924. 无需修改.
 BK_CI_WEBSOCKET_API_PORT=21924
