feat: 消息模板初始化sql #5150 添加企业微信host占位符

--- a/scripts/bkenv.properties
+++ b/scripts/bkenv.properties
@@ -37,6 +37,8 @@ BK_SSM_PORT=
 BK_TURBO_PRIVATE_URL=http://bk-turbo.service.consul
 # BK_TURBO_PUBLIC_URL默认为http://turbo.$BK_DOMAIN. 按需修改. turbo网关
 BK_TURBO_PUBLIC_URL=http://turbo.$BK_DOMAIN
+# BK_CI_WEWORK_HOST 默认值为：https://qyapi.weixin.qq.com, 企业微信服务端host，用于调用企业微信api接口
+BK_CI_WEWORK_HOST=https://qyapi.weixin.qq.com
 
 ##########
 # 1-基础配置
