--- a/scripts/bkenv.properties
+++ b/scripts/bkenv.properties
@@ -33,8 +33,8 @@ BK_REPO_HOST=
 BK_SSM_HOST=
 # BK_SSM_PORT无默认值. 无需修改. 声明依赖, 蓝鲸环境下会自动填充. 其他环境无需填写.
 BK_SSM_PORT=
-# BK_CI_WEWORK_HOST 默认值为：https://qyapi.weixin.qq.com, 企业微信服务端host，用于调用企业微信api接口
-BK_CI_WEWORK_HOST=https://qyapi.weixin.qq.com
+# BK_CI_WEWORK_API_URL 默认值为：https://qyapi.weixin.qq.com, 企业微信服务端host，用于调用企业微信api接口
+BK_CI_WEWORK_API_URL=
 
 ##########
 # 1-基础配置
