--- a/scripts/bkenv.properties
+++ b/scripts/bkenv.properties
@@ -41,6 +41,8 @@ BK_TURBO_PUBLIC_URL=http://turbo.$BK_DOMAIN
 BK_CI_WEWORK_HOST=https://qyapi.weixin.qq.com
 # BK_CI_WEWORK_API_URL 默认值为：https://qyapi.weixin.qq.com, 企业微信服务端host，用于调用企业微信api接口
 BK_CI_WEWORK_API_URL=
+# BK_CI_NOTIFY_WEWORK_API_URL 默认值为：https://qyapi.weixin.qq.com, 企业微信服务端host，用于调用企业微信api接口.
+BK_CI_NOTIFY_WEWORK_API_URL=https://qyapi.weixin.qq.com
 
 ##########
 # 1-基础配置
