feat: 提供kubernetes部署方案 issue #4935

--- a/containerization/helm-charts/templates/rbac/role.yml
+++ b/containerization/helm-charts/templates/rbac/role.yml
@@ -46,3 +46,18 @@ roleRef:
   kind: ClusterRole
   name: default-read-role
   apiGroup: ""
+
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  labels: {{- include "common.labels.standard" . | nindent 4 }}
+    app.kubernetes.io/component: serviceaccount
+    {{- if .Values.commonLabels }}
+    {{- include "common.tplvalues.render" ( dict "value" .Values.commonLabels "context" $ ) | nindent 4 }}
+    {{- end }}
+  name: {{ .Values.rbac.serviceAccount }}
+  {{- if .Values.commonAnnotations }}
+  annotations: {{- include "common.tplvalues.render" ( dict "value" .Values.commonAnnotations "context" $ ) | nindent 4 }}
+  {{- end }}
+  namespace: {{ .Release.Namespace }}
