feat: 提供企业微信“蓝盾Bot”，用于推送蓝盾相关消息 #3797 添加weworkService实例化条件
Signed-off-by: fitzcao <cao150260819@126.com>

--- a/support-files/templates/#etc#ci#application-notify.yml
+++ b/support-files/templates/#etc#ci#application-notify.yml
@@ -9,6 +9,9 @@ spring:
 server:
   port: __BK_CI_NOTIFY_API_PORT__
 
+notify:
+  weworkChannel: __BK_CI_NOTIFY_WEWORK_SEND_CHANNEL__  #发送企业微信的通道: weworkAgent 企业微信应用,blueking 蓝鲸消息通道, weworkRobot 企业微信机器人(待开放)
+
 wework:
   corpId:
   corpSecret:
