feat: 消息模板初始化sql #5150 添加企业微信通道channel配置占位符

--- a/scripts/bkenv.properties
+++ b/scripts/bkenv.properties
@@ -205,7 +205,8 @@ BK_CI_STORE_USER_AVATARS_URL=$BK_PAAS_PUBLIC_URL/console/static/img/getheadimg.j
 BK_CI_FQDN_CERT=
 # BK_CI_NOTIFY_WEWORK_API_URL 默认值为：https://qyapi.weixin.qq.com, 企业微信服务端host，用于调用企业微信api接口.
 BK_CI_NOTIFY_WEWORK_API_URL=https://qyapi.weixin.qq.com
-
+# BK_CI_NOTIFY_WEWORK_SEND_CHANNEL 发送rtx的通道: weworkAgent 企业微信应用,blueking 蓝鲸消息, weworkRobot 企业微信机器人(待开放)
+BK_CI_NOTIFY_WEWORK_SEND_CHANNEL=
 ##########
 # 4-微服务依赖
 ##########
