--bug=92340563 【Bug】模版引用红线解析问题fix

--- a/src/backend/ci/ext/tencent/stream/boot-stream-tencent/src/test/resources/templates/repoC/templates/pipeline.yml
+++ b/src/backend/ci/ext/tencent/stream/boot-stream-tencent/src/test/resources/templates/repoC/templates/pipeline.yml
@@ -25,6 +25,12 @@ stages:
   - name: "root_stage_id_1"
     id: root_stage_id_1
     if: [ envs.BK_CI_EVENT == 'push' || varivable.approve ]
+    check-in:
+      gates:
+        - template: epc_checks.yml
+          parameters:
+            receivers:
+              - ruotiantang
     jobs:
       root_job_id_1:
         name: root_job_id_1
