--- a/src/backend/ci/ext/tencent/stream/boot-stream-tencent/src/test/resources/templates/repoA/templates/stage1.yml
+++ b/src/backend/ci/ext/tencent/stream/boot-stream-tencent/src/test/resources/templates/repoA/templates/stage1.yml
@@ -16,6 +16,12 @@ parameters:
 
 stages:
   - name: "res_stage_id_1"
+    check-in:
+      gates:
+        - template: epc_checks.yml
+#          parameters:
+#            receivers:
+#              - ruotiantang
     jobs:
       res_repoA_stage_id_1_job_id_1:
         name: res_repoA_stage_id_1_job_id_1
