--story=868586713 .【蓝盾网关】将jflog的service类接口新增atom子路径

--- a/src/gateway/tencent/vhosts/devops.artifactory.jfrog.conf
+++ b/src/gateway/tencent/vhosts/devops.artifactory.jfrog.conf
@@ -290,7 +290,7 @@ location ~ /jfrog/storage/build/(atom)/([^/]+)/(.*) {
 }
 
 # jfrogstorage的第三方层服务分发
-location ~ /jfrog/storage/service/(archive|custom)/(.*) {
+location ~ /jfrog/storage/service/(archive|custom|atom)/(.*) {
     include method.get.only.conf;
     auth_request /auth/service;
 
