--story=868601125 【蓝盾网关】去掉gitci临时方案

--- a/src/gateway/tencent/vhosts/all.static.server.conf
+++ b/src/gateway/tencent/vhosts/all.static.server.conf
@@ -35,9 +35,7 @@ server {
 
     include gray.conf;
 
-    # TODO 临时功能 , stream切换后要删除
-    set $stream_folder '';
-    root $static_dir/$stream_folder;
+    root $static_dir/stream;
 
     #后台的网关特殊路径
     include vhosts/devops.backend.special.conf;
